# memtomem

./: .gitignore  CHANGELOG.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  stale.yml
docs/adr/: 0001-context-gateway-sync-policies.md  0003-web-ui-e2e-test-infra.md  0004-sources-add-vs-index-tab-overlap.md  0005-force-reindex-metadata-contract.md  0006-web-ui-folder-upload-redaction.md  0007-namespace-crud-prod-exposure.md  0008-wiki-layer.md
docs/guides/: agent-memory-guide.md  configuration.md  embeddings.md  getting-started.md  google-drive.md  hands-on-tutorial.md  hooks.md  llm-providers.md  mcp-clients.md  reference.md  uninstall.md  use-cases.md  user-guide.md  web-ui.md
docs/guides/integrations/: antigravity.md  claude-code.md  claude-desktop.md  cursor.md  gemini-cli.md  langgraph.md  windsurf.md
docs/planning/: b2-v2-design.md  b2-v2-gemini-template.md  b2-v2-handoff.md  b2-v2-phase1-validation.md  b2-v2-phase2b-ledger.md  b2-v2-query-portfolio.md
examples/notebooks/: 01_hello_memory.ipynb  02_index_and_filter.ipynb  03_agent_memory_patterns.ipynb  04_search_tuning.ipynb  05_langgraph_integration.ipynb  06_lifecycle.ipynb  07_embedding_providers.ipynb  08_llm_features.ipynb  README.md
signatures/v1/: cla.json
tools/retrieval-eval/: README.md  calibrate_portfolio.py  compute_idf_baseline.py  drift_validator.py  measure_sensitivity.py  query_portfolio.py
