[project]
name = "memtomem-workspace"
version = "0.1.0"
description = "memtomem — Markdown-first memory infrastructure for AI agents"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = ["packages/memtomem"]

[tool.uv.sources]
memtomem = { workspace = true }

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint.per-file-ignores]
"packages/memtomem/src/memtomem/server/__init__.py" = ["E402", "F401"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages/memtomem/tests"]
markers = [
    "ollama: requires a running Ollama instance (auto-skipped when unavailable)",
    "llm: requires a live LLM API key (OpenAI/Anthropic); CI runs these in the nightly job only",
    "multilingual: multilingual/large-corpus regression tests (runs in the test-golden-path CI job)",
]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
ignore_missing_imports = true
disable_error_code = ["has-type", "attr-defined"]

[dependency-groups]
dev = [
    "memtomem[all]",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "mypy>=1.14",
    "types-PyYAML>=6.0",
]
